cmake_minimum_required(VERSION 3.26)
project(c_primer_plus C)

set(CMAKE_C_STANDARD 11)

add_executable(
        c_primer_plus main.c

        chapter_1_getting_ready/listing_1_1_example_of_c_source_code.c
        chapter_1_getting_ready/listing_1_2_concrete.c

        chapter_2_introducing_c/listing_2_1_the_first_c_program.c
        chapter_2_introducing_c/listing_2_2_the_fathm_ft_c_program.c
        chapter_2_introducing_c/listing_2_3_the_two_func_c_program.c
        chapter_2_introducing_c/listing_2_4_the_nogood_c_program.c
        chapter_2_introducing_c/programming_exercises/exercise_1.c
        chapter_2_introducing_c/programming_exercises/exercise_2.c
        chapter_2_introducing_c/programming_exercises/exercise_3.c
        chapter_2_introducing_c/programming_exercises/exercise_4.c
        chapter_2_introducing_c/programming_exercises/exercise_5.c
        chapter_2_introducing_c/programming_exercises/exercise_6.c
        chapter_2_introducing_c/programming_exercises/exercise_7.c
        chapter_2_introducing_c/programming_exercises/exercise_8.c

        chapter_3_data_and_c/listing_3_1_the_platinum_c_program.c
        chapter_3_data_and_c/listing_3_2_the_print1_c_program.c
        chapter_3_data_and_c/listing_3_3_the_base_c_program.c
        chapter_3_data_and_c/listing_3_4_the_toobig_c_program.c
        chapter_3_data_and_c/listing_3_5_the_print2_c_program.c
        chapter_3_data_and_c/listing_3_6_the_charcode_c_program.c
        chapter_3_data_and_c/listing_3_7_the_altnames_c_program.c
        chapter_3_data_and_c/listing_3_8_the_showf_pt_c_program.c
        chapter_3_data_and_c/listing_3_9_the_floaterr_c_program.c
        chapter_3_data_and_c/listing_3_10_the_typesize_c_program.c
        chapter_3_data_and_c/listing_3_11_the_badcount_c_program.c
        chapter_3_data_and_c/listing_3_12_the_escape_c_program.c
        chapter_3_data_and_c/programming_exercises/exercise_1.c
        chapter_3_data_and_c/programming_exercises/exercise_2.c
        chapter_3_data_and_c/programming_exercises/exercise_3.c
        chapter_3_data_and_c/programming_exercises/exercise_4.c
        chapter_3_data_and_c/programming_exercises/exercise_5.c
        chapter_3_data_and_c/programming_exercises/exercise_6.c
        chapter_3_data_and_c/programming_exercises/exercise_7.c
        chapter_3_data_and_c/programming_exercises/exercise_8.c

        chapter_4_character_strings_and_formated_input_output/listing_4_1_the_talkback_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_2_the_praisel_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_3_the_praise2_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_4_the_pizza_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_5_the_defines_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_6_the_printout_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_7_the_width_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_8_the_floats_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_9_the_flags_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_10_the_stringf_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_11_the_intconv_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_12_the_floatcnv_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_13_the_prntval_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_14_the_longstrg_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_15_the_input_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_16_the_varwid_c_program.c
        chapter_4_character_strings_and_formated_input_output/listing_4_17_the_skip2_c_program.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_1.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_2.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_3.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_4.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_5.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_6.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_7.c
        chapter_4_character_strings_and_formated_input_output/programming_exercises/exercise_8.c

        chapter_5_operators_expresions_and_statemens/listing_5_1_the_shoes1_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_2_the_shoes2_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_3_the_golf_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_4_the_squares_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_5_the_wheat_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_6_the_divide_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_7_the_rules_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_8_the_sizeof_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_9_the_min_sec_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_10_the_add_one_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_11_the_post_pre_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_12_the_bottles_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_13_the_addemup_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_14_the_convert_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_15_the_pound_c_program.c
        chapter_5_operators_expresions_and_statemens/listing_5_16_the_running_c_program.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_1.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_2.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_3.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_4.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_5.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_6.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_7.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_8.c
        chapter_5_operators_expresions_and_statemens/programming_exercises/exercise_9.c

        chapter_6_c_control_statements_looping/listing_6_1_the_summing_c_program.c
        chapter_6_c_control_statements_looping/listing_6_2_the_when_c_program.c
        chapter_6_c_control_statements_looping/listing_6_3_the_while1_c_program.c
        chapter_6_c_control_statements_looping/listing_6_4_the_while2_c_program.c
        chapter_6_c_control_statements_looping/listing_6_5_the_cmpflt_c_program.c
        chapter_6_c_control_statements_looping/listing_6_6_the_t_and_f_c_program.c
        chapter_6_c_control_statements_looping/listing_6_7_the_truth_c_program.c
        chapter_6_c_control_statements_looping/listing_6_8_the_trouble_c_program.c
        chapter_6_c_control_statements_looping/listing_6_9_the_boolean_c_program.c
        chapter_6_c_control_statements_looping/listing_6_10_the_sweetie1_c_program.c
        chapter_6_c_control_statements_looping/listing_6_11_the_sweetie2_c_program.c
        chapter_6_c_control_statements_looping/listing_6_12_the_for_cube_c_program.c
        chapter_6_c_control_statements_looping/listing_6_13_the_postage_c_program.c
        chapter_6_c_control_statements_looping/listing_6_14_the_zeno_c_program.c
        chapter_6_c_control_statements_looping/listing_6_15_the_do_while_c_program.c
        chapter_6_c_control_statements_looping/listing_6_16_the_entry_c_program.c
        chapter_6_c_control_statements_looping/listing_6_17_the_rows1_c_program.c
        chapter_6_c_control_statements_looping/listing_6_18_the_rows2_c_program.c
        chapter_6_c_control_statements_looping/listing_6_19_the_scores_in_c_program.c
        chapter_6_c_control_statements_looping/listing_6_20_the_powwer_c_program.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_1.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_2.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_3.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_4.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_5.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_6.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_7.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_8.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_9.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_10.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_11.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_12.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_13.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_14.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_15.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_16.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_17.c
        chapter_6_c_control_statements_looping/programming_exercises/exercise_18.c

        chapter_7_c_control_statements_branching_and_jumps/listing_7_1_the_colddays_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_2_the_cypher1_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_3_the_cypher2_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_4_the_electric_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_5_the_divisors_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_6_the_chcount_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_7_the_wordcnt_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_8_the_paint_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_9_the_skippart_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_10_the_break_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_11_the_animals_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/listing_7_12_the_vowels_c_program.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_1.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_2.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_3.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_4.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_5.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_6.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_7.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_8.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_9.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_10.c
        chapter_7_c_control_statements_branching_and_jumps/programming_exercises/exercise_11.c
)
